[gd_scene load_steps=19 format=3 uid="uid://ddsktpl7id2j1"]

[ext_resource type="Script" path="res://Level/Level.gd" id="1_r8e26"]
[ext_resource type="PackedScene" uid="uid://dod73vs0g3o38" path="res://Level/Background.tscn" id="2_bbnpf"]
[ext_resource type="Texture2D" uid="uid://garkp36yvn2" path="res://Player/player_sheet.png" id="2_hyec8"]
[ext_resource type="Script" path="res://Level/GameOverScreen.gd" id="2_t8f6j"]
[ext_resource type="Texture2D" uid="uid://dvj305n4rmhy2" path="res://UI/exclamation.png" id="3_oj2iu"]
[ext_resource type="Script" path="res://Level/Player.gd" id="4_5cxch"]
[ext_resource type="PackedScene" uid="uid://bcrsaeu0wx5uj" path="res://Level/Floor.tscn" id="6_kqtvn"]
[ext_resource type="AudioStream" uid="uid://cccsuegbgy70w" path="res://SFX/479319_-Electroman-adventures-.mp3" id="6_pxc4h"]
[ext_resource type="Script" path="res://Level/Score.gd" id="8_cs3bw"]
[ext_resource type="Theme" uid="uid://dclhomy225ilm" path="res://UI/UITheme.tres" id="8_hehp5"]
[ext_resource type="Texture2D" uid="uid://12n2415p2ch2" path="res://UI/meterBorder.png" id="10_2x8tk"]
[ext_resource type="Texture2D" uid="uid://dfrwhrvq1emre" path="res://UI/meterFull.png" id="11_7stdm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vipcp"]
size = Vector2(130, 200)

[sub_resource type="Animation" id="Animation_eybyl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bsbi8"]
resource_name = "punch"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}

[sub_resource type="Animation" id="Animation_qc5wy"]
resource_name = "running"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_vl3f0"]
resource_name = "whoops"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.8, 7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u6yob"]
_data = {
"RESET": SubResource("Animation_eybyl"),
"punch": SubResource("Animation_bsbi8"),
"running": SubResource("Animation_qc5wy"),
"whoops": SubResource("Animation_vl3f0")
}

[node name="Level" type="Node"]
script = ExtResource("1_r8e26")

[node name="GameOverScreen" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("2_t8f6j")

[node name="BlackBG" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.164706, 0.164706, 0)

[node name="GameOverText" type="Label" parent="GameOverScreen"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("8_hehp5")
text = "whoops"

[node name="FinalScoreText" type="Label" parent="GameOverScreen"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = 74.0
offset_right = 141.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_hehp5")
text = "Final Score: 0"

[node name="Backgrounds" type="Node" parent="."]

[node name="Background1" parent="Backgrounds" instance=ExtResource("2_bbnpf")]
position = Vector2(-2998, 0)

[node name="Background2" parent="Backgrounds" instance=ExtResource("2_bbnpf")]

[node name="Guys" type="Node" parent="."]

[node name="InRangeNotifier" type="Sprite2D" parent="."]
visible = false
position = Vector2(240, 500)
texture = ExtResource("3_oj2iu")

[node name="DieGuysAndItems" type="Node" parent="."]

[node name="Player" type="Area2D" parent="."]
position = Vector2(240, 640)
collision_layer = 2
collision_mask = 5
script = ExtResource("4_5cxch")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("2_hyec8")
hframes = 3
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-3, 0)
shape = SubResource("RectangleShape2D_vipcp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
autoplay = "running"
libraries = {
"": SubResource("AnimationLibrary_u6yob")
}

[node name="Floors" type="Node" parent="."]

[node name="Floor1" parent="Floors" instance=ExtResource("6_kqtvn")]
position = Vector2(-2998, 740)

[node name="Floor2" parent="Floors" instance=ExtResource("6_kqtvn")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score" type="Node2D" parent="."]
position = Vector2(1200, 50)
script = ExtResource("8_cs3bw")

[node name="ColorRect" type="ColorRect" parent="Score"]
offset_right = 350.0
offset_bottom = 90.0
color = Color(0.596078, 0.337255, 1, 1)

[node name="ScoreText" type="Label" parent="Score"]
offset_right = 350.0
offset_bottom = 90.0
theme = ExtResource("8_hehp5")
text = "Score: 0"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(800, 450)

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_pxc4h")
volume_db = -10.0
autoplay = true
bus = &"BGM"

[node name="ChargeMeter" type="Sprite2D" parent="."]
visible = false
position = Vector2(185, 760)
texture = ExtResource("10_2x8tk")
centered = false

[node name="ChargeMeterBar" type="Sprite2D" parent="ChargeMeter"]
show_behind_parent = true
texture = ExtResource("11_7stdm")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 0, 40)

[connection signal="area_entered" from="Player" to="." method="onPlayer_AreaEntered"]
[connection signal="area_exited" from="Player" to="." method="onPlayer_AreaExited"]
